# braintrust-proxy

./: .envrc  .gitignore  .gitleaks.toml  .npmrc  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.config.js
.github/workflows/: agent-provider-model-sync.yaml  deploy-cloudflare.yaml  enforce-pnpm.yml  fix-bot-issues.yaml  fix-missing-model-bot-issues.yaml  js.yaml  lint.yaml  model-deprecation-audit.yaml  sync-models.yaml  verify-deployed-models-on-vercel-comment.yaml  verify-deployed-models.yaml
apis/cloudflare/: .gitignore  README.md  package.json  tsconfig.json  tsup.config.ts  worker-configuration.d.ts  wrangler-template.toml  wrangler.toml
apis/cloudflare/src/: PrometheusSerializer.ts  array-buffer.ts  attachment-wrapper.ts  billing.ts  encrypt.ts  env.ts  exporter.ts  index.ts  lib.ts  metric-aggregator.ts  metrics.ts  periodic-reader.ts  proxy.ts  realtime-logger.test.ts  realtime-logger.ts  realtime.ts  tracing.ts
apis/node/: README.md  package.json  tsconfig.json
apis/node/src/: ai.ts  anthropic.ts  cache.ts  env.ts  index.js  local.ts  login.ts  node-proxy.ts
apis/vercel/: .gitignore  .npmrc  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
apis/vercel/components/: headers.tsx
apis/vercel/lib/: appRouteProxy.test.ts  appRouteProxy.ts  nodeProxy.test.ts  nodeProxy.ts
py/: README.md  pyproject.toml
py/braintrust_proxy/: __init__.py
py/braintrust_proxy/openai/: __init__.py  models.py  types.py
(+12 files in other folders)
